# craft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: CMakeLists.txt  gradient.glsl.comp  triangle.frag.spv  triangle.vert.spv  triangle_mesh.vert  triangle_mesh.vert.spv
shaders/mesh/: textured_mesh.frag  textured_mesh.vert  triangle.frag  triangle.vert  triangle_mesh.vert
src/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/graphics/: camera.hpp  texture_map.cpp  texture_map.hpp  vulkan.hpp
src/graphics/vulkan/: buffer.hpp  descriptor.hpp  device.cpp  device.hpp  image.hpp  imgui.cpp  imgui.hpp  instance.cpp  instance.hpp  mesh.cpp  mesh.hpp  pipeline.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  utils.hpp  vma.cpp
src/graphics/widgets/: background_settings_widget.hpp  render_time_widget.hpp  terrain_widget.hpp  util_widget.hpp  widget.hpp
src/math/: color.hpp  mat.hpp  vec.hpp
src/platform/: tcp_socket.cpp  tcp_socket.hpp  window.cpp  window.hpp
src/util/: error.cpp  error.hpp  optimization.hpp  raii.hpp
src/world/: chunk.hpp  generator.hpp  world.hpp
textures/aseprite/: crosshair.aseprite  spritesheet_blocks.aseprite  spritesheet_blocks_v2.aseprite
